maintainIT2/src/objects/Part__c.object
<CustomObject>
    <fields>
        <fullName>Stock_UOM__c</fullName>
        <description>The Stock UOM is also the Primary UOM and MUST be lowest level of Unit of Measure.  All &quot;Part Transactions&quot; occur in the Stock/Primary UOM.  Values adopted from ANSI X12.3 Code List 355 Unit of Measure.</description>
        <inlineHelpText>The Stock UOM is also the Primary UOM and MUST be lowest level of Unit of Measure.  All &quot;Part Transactions&quot; occur in the Stock/Primary UOM.  Values adopted from ANSI X12.3 Code List 355 Unit of Measure.</inlineHelpText>
        <label>Stock UOM</label>
        <picklist>
            <picklistValues>
                <fullName>AY - Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BX - Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH - Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM - Centimeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN - Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT - Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ - Dozen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA - Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FT - Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS - Gross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN - Inch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KT - Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB - Pound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT - Liter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR - Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OL - Ounces Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC - Piece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PK - Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL - Pallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT - Pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QT - Quart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE - Reel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RL - Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM - Ream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SH - Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TY - Tray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UN - Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YD - Yard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Storeroom_Description__c</fullName>
        <description>Formula Reference to Storeroom Description</description>
        <formula>Warehouse__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Reference to Storeroom Description</inlineHelpText>
        <label>Storeroom Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Unit Value of a Part item used to calculate costs associated with an issue/adjustment transaction and to value on hand inventory.  System populated via workflow.  Field security should be set to read only for all profiles.</description>
        <inlineHelpText>Unit Value of a Part item used to calculate costs associated with an issue/adjustment transaction and to value on hand inventory.  System populated via workflow.  Field security should be set to read only for all profiles.</inlineHelpText>
        <label>Unit Value</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valuation_Method__c</fullName>
        <description>The Valuation Method is used to define which of the Part Costs are used for the Unit Cost - DO NOT EDIT THE AVAILABLE VALUES IN THIS LIST!  Unexpected results will occur.</description>
        <inlineHelpText>The Valuation Method is used to define which of the Part Costs are used for the Unit Cost - DO NOT EDIT THE AVAILABLE VALUES IN THIS LIST!  Unexpected results will occur.</inlineHelpText>
        <label>Valuation Method</label>
        <picklist>
            <picklistValues>
                <fullName>Last In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weighted Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Part__c</fullName>
        <description>Preferred Vendor Part #</description>
        <inlineHelpText>Vendor Part #</inlineHelpText>
        <label>Preferred Vendor Part #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Preferred__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Preferred Part Vendor.  Lookup to Accounts where Vendor = True</description>
        <inlineHelpText>Preferred Part Vendor.  Lookup to Accounts where Vendor = True</inlineHelpText>
        <label>Preferred Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Parts</relationshipLabel>
        <relationshipName>Vendor_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Secondary_Part__c</fullName>
        <description>Secondary Vendor Part #</description>
        <inlineHelpText>Secondary Vendor Part #</inlineHelpText>
        <label>Secondary Vendor Part #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Secondary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Vendor for Part - Lookup to Account with optional filter of Vendor = &quot;True&quot;</description>
        <inlineHelpText>Secondary Vendor for Part - Lookup to Account with optional filter of Vendor = &quot;True&quot;</inlineHelpText>
        <label>Secondary Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parts (Secondary Vendor)</relationshipLabel>
        <relationshipName>Vendor_Secondary_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Tertiary_Part__c</fullName>
        <description>Tertiary Vendor Part #</description>
        <inlineHelpText>Tertiary Vendor Part #</inlineHelpText>
        <label>Tertiary Vendor Part #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Tertiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tertiary Vendor for Part - Lookup to Account with optional filter of Vendor = &quot;True&quot;</description>
        <inlineHelpText>Tertiary Vendor for Part - Lookup to Account with optional filter of Vendor = &quot;True&quot;</inlineHelpText>
        <label>Tertiary Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parts (Tertiary Vendor)</relationshipLabel>
        <relationshipName>Vendor_Tertiary_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Warehouse</description>
        <inlineHelpText>Lookup to Warehouse</inlineHelpText>
        <label>Storeroom</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weighted_Avg_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Weighted Average Cost based on Receipt Transactions.  System populated value via workflow.  Field security should be set to read only for all profiles.</description>
        <inlineHelpText>Weighted Average Cost based on Receipt Transactions.  System populated value via workflow.  Field security should be set to read only for all profiles.</inlineHelpText>
        <label>Weighted Avg Cost</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Part</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Parts_Open_Orders</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Vendor_Preferred__c</columns>
        <columns>Vendor_Part__c</columns>
        <columns>On_Order_Qty__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>On_Order_Qty__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Parts with Open Orders</label>
    </listViews>
    <nameField>
        <label>Part ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <recordTypes>
        <fullName>Stock_Item</fullName>
        <active>true</active>
        <description>This record type represents a part that can be inventoried</description>
        <label>Stock Item</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Min_Qty_NonNegative</fullName>
        <active>false</active>
        <description>Test to ensure that the Min Qty is a non-negative value (Obsolete - Field Deprecated)</description>
        <errorConditionFormula>Min_Qty__c   &lt;  0</errorConditionFormula>
        <errorDisplayField>Min_Qty__c</errorDisplayField>
        <errorMessage>Min Qty cannot be a negative value (Obsolete)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purchase_Pack_Qty_Update</fullName>
        <active>true</active>
        <description>Ensures that the Purchase Pack Qty cannot be Updated when the On Order Qty is Greater than Zero</description>
        <errorConditionFormula>ISCHANGED( Reorder_Qty__c )  &amp;&amp;  On_Order_Qty__c  &gt; 0</errorConditionFormula>
        <errorDisplayField>Reorder_Qty__c</errorDisplayField>
        <errorMessage>The Purchase Pack Qty cannot be changed while the On Order Qty is Greater than Zero.  Please receive or cancel open purchase order line items.  The preferred approach is to create a new Part record with an updated Purchase Pack Qty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purchase_Price_GE_Zero</fullName>
        <active>true</active>
        <description>Ensures that the Purchase Price is Greater Than or Equal to Zero and Is Not Null</description>
        <errorConditionFormula>Purchase_Price__c  &lt; 0 ||  ISNULL( Purchase_Price__c )</errorConditionFormula>
        <errorDisplayField>Purchase_Price__c</errorDisplayField>
        <errorMessage>The Purchase Price cannot be a Negative or a Null Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ROQ_LE_One</fullName>
        <active>true</active>
        <description>The &quot;Purchase Pack Qty&quot; must be Greater Than or Equal to One (1)</description>
        <errorConditionFormula>Reorder_Qty__c  &lt;= 0 ||  ISBLANK(Reorder_Qty__c)</errorConditionFormula>
        <errorDisplayField>Reorder_Qty__c</errorDisplayField>
        <errorMessage>The Purchase Pack Qty must be Greater Than or Equal to one (1)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reorder_Point_NonNegative</fullName>
        <active>true</active>
        <description>Ensures that the Min Qty is a Non-negative value.  The field labeled &quot;Min Qty&quot; is the Reorder Point Field</description>
        <errorConditionFormula>Reorder_Point__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Reorder_Point__c</errorDisplayField>
        <errorMessage>The Min Qty must be Greater Than or Equal to zero (0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Standard_Cost_Non_Negative</fullName>
        <active>true</active>
        <description>Ensures that the Standard Cost for a Part is Greater Than or Equal to Zero (0).</description>
        <errorConditionFormula>Standard_Cost__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Standard_Cost__c</errorDisplayField>
        <errorMessage>The Standard Cost must be Greater Than or Equal to Zero</errorMessage>
    </validationRules>
</CustomObject>